<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
<<<<<<< HEAD
	<groupId>com.wfj.exception.client</groupId>
	<artifactId>exception-client-framework</artifactId>
	<packaging>jar</packaging>
	<version>1.1.5.RELEASE</version>
=======
	<groupId>com.wfj.exception</groupId>
	<artifactId>exception-client-framework</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
>>>>>>> 29af762007a82c8a24f9f7b3459a8d80fa2b0fa3
	<name>exception-client-framework</name>
	<url>http://maven.apache.org</url>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
<<<<<<< HEAD
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.5</version>
			<scope>runtime</scope>
		</dependency>
=======
>>>>>>> 29af762007a82c8a24f9f7b3459a8d80fa2b0fa3
		<dependency> 
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>  
			<version>1.1.28</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5</version>
		</dependency>
<<<<<<< HEAD
=======
		
		<dependency>
			<groupId>org.apache.axis</groupId>
			<artifactId>axis</artifactId>
			<version>1.4</version>
		</dependency>
		
>>>>>>> 29af762007a82c8a24f9f7b3459a8d80fa2b0fa3
		<dependency>
			<groupId>javax.xml</groupId>
			<artifactId>jaxrpc</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>commons-discovery</groupId>
			<artifactId>commons-discovery</artifactId>
			<version>0.5</version>
		</dependency>
		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<version>1.6.2</version>
		</dependency>
<<<<<<< HEAD

		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
		</dependency>


		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.3.3</version>
		</dependency>
	</dependencies>

=======
		


	</dependencies>

	<!-- <build> <resources> <resource> <directory>bin/</directory> <includes> 
		<include>**/*.class</include> </includes> </resource> <resource> <directory>resources/${package.env}</directory> 
		<targetPath>../config</targetPath> </resource> <resource> <directory> . </directory> 
		<includes> <include> readme.txt </include> </includes> <targetPath>..</targetPath> 
		</resource> <resource> <directory>lib</directory> <targetPath>../lib</targetPath> 
		</resource> </resources> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
		<artifactId>maven-jar-plugin</artifactId> <configuration> <archive> <manifestFile> 
		src/main/resources/META-INF/MANIFEST.MF </manifestFile> <manifest> <addClasspath>true</addClasspath> 
		<classpathPrefix>lib/</classpathPrefix> <mainClass> com.mapbar.search.index.DataReview 
		</mainClass> </manifest> <manifestEntries> <Class-Path> . ./config lib/agent.jar 
		lib/airsearchnew.jar lib/avmserver.jar lib/classes12.jar lib/database.jar 
		lib/DelFile.jar lib/GeoService.jar lib/highlite.jar lib/HttpGet.jar lib/jxl.jar 
		lib/log.jar lib/lucene-analyzers-common-4.0.0.jar lib/lucene-analyzers-smartcn-4.0.0.jar 
		lib/lucene-core-4.0.0.jar lib/lucene-queries-4.0.0.jar lib/lucene-queryparser-4.0.0.jar 
		lib/lucene-spatial-4.0.0.jar lib/mail.jar lib/mapbar-util.jar lib/MapbarSeg4Index_new.jar 
		lib/mapbar_index_dat.jar lib/pinyin4j-2.5.0.jar lib/spatial4j-0.3.jar </Class-Path> 
		</manifestEntries> </archive> </configuration> </plugin> <plugin> <artifactId>maven-compiler-plugin</artifactId> 
		<configuration> <source>1.6</source> <target>1.6</target> <encoding>UTF-8</encoding> 
		</configuration> </plugin> </plugins> <finalName>index_tool_84_2.0</finalName> 
		</build> -->
>>>>>>> 29af762007a82c8a24f9f7b3459a8d80fa2b0fa3
	<build>
		<plugins>
			<!-- 打包java源码 -->
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<encoding>utf-8</encoding>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<!-- maven-jar-plugin插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<executions>
					<execution>
						<id>my-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<classifier>api</classifier>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<argLine>-Xms512m -Xmx2048m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
					<includes>
						<include>com/wfj/**/*Test*.java</include>
					</includes>
					<printSummary>true</printSummary>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.sonar</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>2.4</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<instrumentation>
						<excludes>
							<exclude>com/**/Test.class</exclude>
							<exclude>test/Test.class</exclude>
						</excludes>
					</instrumentation>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
		</plugins>
	</build>
<<<<<<< HEAD
<distributionManagement>
		<repository>
			<id>releases</id>
			<name>releases for me</name>
			<url>http://10.6.2.28:8081/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Internal Snapshots</name>
			<url>http://10.6.2.28:8081/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
=======

>>>>>>> 29af762007a82c8a24f9f7b3459a8d80fa2b0fa3
</project>
